# git-project

./: .gitignore  pyproject.toml
src/apps/extractor/: __init__.py  main.py
src/apps/extractor/utils/: __init__.py  extract_commits.py
